-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
4.8.0, 5.0.0 Beta 1
-
None
-
Qt4.8.0 + Windows 7
The following example demonstrates the error. Run the example and start dragging the 'Spanning' item on the QTreeWidget.
--> ASSERT failure in QVector<T>::at: "index out of range" is triggered.
#include <QTreeWidget> #include <QApplication> int main(int argc, char **argv) { QApplication app(argc, argv); QTreeWidget tree; tree.setHeaderLabels(QStringList() << "Column 1" << "Column 2"); tree.setDragDropMode(QAbstractItemView::DragOnly); tree.show(); tree.setFirstItemColumnSpanned(new QTreeWidgetItem(&tree,QStringList() << "Spanning"), true); return app.exec(); }
For Gerrit Dashboard: QTBUG-25140 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
23214,1 | Fix out of bounds use of QVector API. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |
23581,8 | Take account of spanned items in QTreeView when dragging. | master | qt/qtbase | Status: MERGED | +2 | 0 |
23582,4 | Take account of spanned items in QTreeView when dragging. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |